--- a/static/pages/CourseIntro.html
+++ b/static/pages/CourseIntro.html
@@ -66,183 +66,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
       <!-- Main content -->
       <section class="content">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="box box-solid">
-              <div class="box-body">
-                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                  <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
-                  </ol>
-                  <div class="carousel-inner">
-                    <div class="item active">
-                      <a href="#First">
-                        <img src="../../static/src/neko1.jpg" alt="First slide" class="center-block">
-
-                        <div class="carousel-caption">First Slide</div>
-                      </a>
-                    </div>
-                    <div class="item pull-">
-                      <a href="#Second">
-                        <img src="../../static/src/neko2.jpg" alt="Second slide" class="center-block">
-
-                        <div class="carousel-caption">Second Slide</div>
-                      </a>
-                    </div>
-                    <div class="item">
-                      <a href="#Third">
-                        <img src="../../static/src/neko3.jpg" alt="Third slide" class="center-block">
-
-                        <div class="carousel-caption">Third Slide</div>
-                      </a>
-                    </div>
-                  </div>
-                  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                    <span class="fa fa-angle-left"></span>
-                  </a>
-                  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                    <span class="fa fa-angle-right"></span>
-                  </a>
-                </div>
-              </div>
-              <!-- /.box-body --> </div>
-            <!-- /.box --> </div>
-          <!-- /.col -->
-
-          <!-- <div class="row">
-          -->
-          <div class="col-md-12">
-            <div class="box box-solid">
-              <div class="box-header with-border"> <i class="fa fa-book"></i>
-                <a name="First"></a>
-                <h3 class="box-title">First Page</h3>
-              </div>
-              <!-- /.box-header -->
-              <div class="box-body">
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-              </div>
-              <!-- /.box-body --> </div>
-            <!-- /.box --> </div>
-          <!-- ./col -->
-
-          <!-- <div class="row">
-          -->
-          <div class="col-md-12">
-            <div class="box box-solid">
-              <div class="box-header with-border">
-                <i class="fa fa-book"></i>
-                <a name="Second"></a>
-                <h3 class="box-title">Second Page</h3>
-              </div>
-              <!-- /.box-header -->
-              <div class="box-body">
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-              </div>
-              <!-- /.box-body --> </div>
-            <!-- /.box --> </div>
-          <!-- ./col -->
-
-          <!-- <div class="row">
-          -->
-          <div class="col-md-12">
-            <div class="box box-solid">
-              <div class="box-header with-border">
-                <i class="fa fa-book"></i>
-                <a name="Third"></a>
-                <h3 class="box-title">Third Page</h3>
-              </div>
-              <!-- /.box-header -->
-              <div class="box-body">
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-              </div>
-              <!-- /.box-body --> </div>
-            <!-- /.box --> </div>
-          <!-- ./col --> </div>
-        <!-- ./row --> </section>
-      <!-- /.content --> </div>
+      <!-- load by js  -->
+      </section>
+      <!-- /.content --> 
+    </div>
     <!-- /.content-wrapper -->
 
     <!-- Main Footer -->
@@ -263,8 +90,87 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- initial -->
   <script src="../../static/js/initial.js"></script>
 
-  <!-- initial -->
-  <script src="../../static/js/initial.js"></script>
+  <!-- template -->
+  <script src="../../static/dist/js/template.js"></script>
+  <script src="../../static/js/CourseIntro.js"></script>
 </body>
 </html>
 
+
+<!-- content template -->
+<script id="main_template" type="text/html">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="box box-solid">
+        <div class="box-body">
+          <div id="carousel-course" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              {{each list as data i}} {{if i == 0}}
+              <li data-target="#carousel-course" data-slide-to="page{{i}}" class="active"></li>
+              {{else}}
+              <li data-target="#carousel-course" data-slide-to="page{{i}}"></li>
+              {{/if}} {{/each}}
+            </ol>
+            <div class="carousel-inner">
+              {{each list as data i}} {{if i == 0}}
+              <div class="item active">
+                {{else}}
+                <div class="item">
+                  {{/if}}
+                  <a href="#page{{i}}">
+                    <img src="../../static/src/neko{{i+1}}.jpg" alt="{{data.title}}" class="center-block">
+                    <div class="carousel-caption">{{data.title}}</div>
+                  </a>
+                </div>
+                {{/each}}
+                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                  <span class="fa fa-angle-left"></span>
+                </a>
+                <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                  <span class="fa fa-angle-right"></span>
+                </a>
+              </div>
+            </div>
+            <!-- /.box-body -->
+          </div>
+          <!-- /.box -->
+        </div>
+        <!-- /.col -->
+        {{each list as data i}}
+        <div class="col-md-13">
+          <div class="box box-solid">
+            <div class="box-header with-border"> <i class="fa fa-book"></i>
+              <a name="page{{i}}"></a>
+              <h3 class="box-title">{{data.title}}</h3>
+            </div>
+            <!-- /.box-header -->
+            <div class="box-body">
+              {{data.content}}
+              <br> {{data.content}}
+              <br> {{data.content}}
+              <br> {{data.content}}
+              <br> {{data.content}}
+              <br> {{data.content}}
+              <br> {{data.content}}
+              <br> {{data.content}}
+              <br> {{data.content}}
+              <br> {{data.content}}
+              <br> {{data.content}}
+              <br> {{data.content}}
+              <br> {{data.content}}
+              <br> {{data.content}}
+              <br> {{data.content}}
+              <br> {{data.content}}
+              <br> {{data.content}}
+              <br> {{data.content}}
+              <br>
+            </div>
+            <!-- /.box-body -->
+          </div>
+          <!-- /.box -->
+        </div>
+        <!-- ./col -->
+        {{/each}}
+      </div>
+      <!-- ./row -->
+</script>
