--- a/static/pages/Courseware.html
+++ b/static/pages/Courseware.html
@@ -4,6 +4,7 @@ This is a starter template page. Use this page to start your new project from
 scratch. This page gets rid of all links and provides the needed markup only.
 -->
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +16,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <!-- Ionicons -->
-  <link rel="stylesheet" href="https://cdn.bootcss.com/ionicons/2.0.1/css/ionicons.min.css" >
+  <link rel="stylesheet" href="https://cdn.bootcss.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="../../static/set/dist/css/AdminLTE.min.css">
   <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
@@ -23,7 +24,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
         apply the skin class to the body tag so the changes take effect.
   -->
   <link rel="stylesheet" href="../../static/set/dist/css/skins/skin-blue.min.css">
-
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -31,7 +31,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 </head>
-  <!--
+<!--
 BODY TAG OPTIONS:
 =================
 Apply one or more of the following classes to get the
@@ -51,16 +51,17 @@ desired effect
 |               | sidebar-mini                            |
 |---------------------------------------------------------|
 -->
+
 <body class="hold-transition skin-blue sidebar-mini">
   <div class="wrapper">
-
     <!-- Main Header -->
     <header class="main-header">
-      <!--load by js--> </header>
+      <!--load by js-->
+    </header>
     <!-- Left side column. contains the logo and sidebar -->
     <aside class="main-sidebar">
-      <!--load by js--> </aside>
-
+      <!--load by js-->
+    </aside>
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
       <!-- Content Header (Page header) -->
@@ -71,204 +72,86 @@ desired effect
         </h1>
         <ol class="breadcrumb">
           <li>
-            <a href="#"> <i class="fa fa-dashboard"></i>
-              Home
-            </a>
+            <i class="fa fa-dashboard"></i> Home
           </li>
           <li class="active">Courseware Download</li>
         </ol>
       </section>
-
       <!-- Main content -->
+
       <section class="content">
-        <div class="row">
-
-          <div class="col-md-12">
-            <div class="box box-primary">
-              <div class="box-header with-border">
-                <h3 class="box-title">软件需求工程 刘玉生老师 周五3.4.5节</h3>
-
-                <div class="box-tools pull-right">
-                  <button name="MaterialPlus" type="button" class="btn btn-box-tool"> <i class="fa fa-plus-circle"></i>
-                  </button>
-                  <button type="button" class="btn btn-box-tool" data-widget="collapse"> <i class="fa fa-minus"></i>
-                  </button>
-                </div>
-              </div>
-              <!-- /.box-header -->
-              <div class="box-body">
-                <ul class="products-list product-list-in-box">
-                  <li class="item">
-                    <div class="product-img">
-                      <img src="../../static/set/dist/img/default-50x50.gif" alt="Product Image"></div>
-                    <div class="product-info">
-                      <a href="javascript:void(0)" class="product-title">
-                        ch1
-                        <div class="btn-group pull-right">
-                          <button type="button" class="btn btn-default">下载</button>
-                          <button type="button" class="btn btn-default">预览</button>
-                        </div>
-                        <span class="product-description">第一章</span>
-                      </a>
-                    </div>
-                  </li>
-                  <!-- /.item -->
-                  <li class="item">
-                    <div class="product-img">
-                      <img src="../../static/set/dist/img/default-50x50.gif" alt="Product Image"></div>
-                    <div class="product-info">
-                      <a href="javascript:void(0)" class="product-title">
-                        ch2
-                        <div class="btn-group pull-right">
-                          <button type="button" class="btn btn-default">下载</button>
-                          <button type="button" class="btn btn-default">预览</button>
-                        </div>
-                        <span class="product-description">第二章</span>
-                      </a>
-                    </div>
-                  </li>
-                  <!-- /.item -->
-                  <li class="item">
-                    <div class="product-img">
-                      <img src="../../static/set/dist/img/default-50x50.gif" alt="Product Image"></div>
-                    <div class="product-info">
-                      <a href="javascript:void(0)" class="product-title">
-                        ch3
-                        <div class="btn-group pull-right">
-                          <button type="button" class="btn btn-default">下载</button>
-                          <button type="button" class="btn btn-default">预览</button>
-                        </div>
-                        <span class="product-description">第三章</span>
-                      </a>
-                    </div>
-                  </li>
-                  <!-- /.item -->
-                  <li class="item">
-                    <div class="product-img">
-                      <img src="../../static/set/dist/img/default-50x50.gif" alt="Product Image"></div>
-                    <div class="product-info">
-                      <a href="javascript:void(0)" class="product-title">
-                        ch4
-                        <div class="btn-group pull-right">
-                          <button type="button" class="btn btn-default">下载</button>
-                          <button type="button" class="btn btn-default">预览</button>
-                        </div>
-                        <span class="product-description">第四章</span>
-                      </a>
-                    </div>
-                  </li>
-                  <!-- /.item --> </ul>
-              </div>
-              <!-- /.box-body --> </div>
-            <!-- /.box --> </div>
-          <!-- /.col-md-12 -->
-
-          <div class="col-md-12">
-            <div class="box box-primary">
-              <div class="box-header with-border">
-                <h3 class="box-title">软件工程管理 邢卫老师 周三3.4.5节</h3>
-
-                <div class="box-tools pull-right">
-                  <button name="MaterialPlus" type="button" class="btn btn-box-tool"> <i class="fa fa-plus-circle"></i>
-                  </button>
-                  <button type="button" class="btn btn-box-tool" data-widget="collapse">
-                    <i class="fa fa-minus"></i>
-                  </button>
-
-                </div>
-              </div>
-              <!-- /.box-header -->
-              <div class="box-body">
-                <ul class="products-list product-list-in-box">
-                  <li class="item">
-                    <div class="product-img">
-                      <img src="../../static/set/dist/img/default-50x50.gif" alt="Product Image"></div>
-                    <div class="product-info">
-                      <a href="javascript:void(0)" class="product-title">
-                        ch1
-                        <div class="btn-group pull-right">
-                          <button type="button" class="btn btn-default">下载</button>
-                          <button type="button" class="btn btn-default">预览</button>
-                        </div>
-                        <span class="product-description">第一章</span>
-                      </a>
-                    </div>
-                  </li>
-                  <!-- /.item -->
-                  <li class="item">
-                    <div class="product-img">
-                      <img src="../../static/set/dist/img/default-50x50.gif" alt="Product Image"></div>
-                    <div class="product-info">
-                      <a href="javascript:void(0)" class="product-title">
-                        ch2
-                        <div class="btn-group pull-right">
-                          <button type="button" class="btn btn-default">下载</button>
-                          <button type="button" class="btn btn-default">预览</button>
-                        </div>
-                        <span class="product-description">第二章</span>
-                      </a>
-                    </div>
-                  </li>
-                  <!-- /.item -->
-                  <li class="item">
-                    <div class="product-img">
-                      <img src="../../static/set/dist/img/default-50x50.gif" alt="Product Image"></div>
-                    <div class="product-info">
-                      <a href="javascript:void(0)" class="product-title">
-                        ch3
-                        <div class="btn-group pull-right">
-                          <button type="button" class="btn btn-default">下载</button>
-                          <button type="button" class="btn btn-default">预览</button>
-                        </div>
-                        <span class="product-description">第三章</span>
-                      </a>
-                    </div>
-                  </li>
-                  <!-- /.item -->
-                  <li class="item">
-                    <div class="product-img">
-                      <img src="../../static/set/dist/img/default-50x50.gif" alt="Product Image"></div>
-                    <div class="product-info">
-                      <a href="javascript:void(0)" class="product-title">
-                        ch4
-                        <div class="btn-group pull-right">
-                          <button type="button" class="btn btn-default">下载</button>
-                          <button type="button" class="btn btn-default">预览</button>
-                        </div>
-                        <span class="product-description">第四章</span>
-                      </a>
-                    </div>
-                  </li>
-                  <!-- /.item --> </ul>
-              </div>
-              <!-- /.box-body --> </div>
-            <!-- /.box --> </div>
-          <!-- /.col-md-12 --> </div>
-        <!-- ./row --> </section>
-      <!-- /.content --> </div>
+      <!-- load by js -->
+      </section>
+      <!-- /.content -->
+    </div>
     <!-- /.content-wrapper -->
-
     <!-- Main Footer -->
     <footer class="main-footer">
-      <!--load by js--> </footer>
-
+      <!--load by js-->
+    </footer>
   </div>
   <!-- ./wrapper -->
-
   <!-- REQUIRED JS SCRIPTS -->
-
   <!-- jQuery 2.2.3 -->
   <script src="../../static/set/plugins/jQuery/jquery-2.2.3.min.js"></script>
   <!-- Bootstrap 3.3.6 -->
   <script src="../../static/set/bootstrap/js/bootstrap.min.js"></script>
   <!-- AdminLTE App -->
   <script src="../../static/set/dist/js/app.min.js"></script>
-
   <!-- Optionally, you can add Slimscroll and FastClick plugins.
      Both of these plugins are recommended to enhance the
      user experience. Slimscroll is required when using the
      fixed layout. -->
   <!-- initial -->
   <script src="../../static/js/initial.js"></script>
+  <!-- template -->
+  <script src="../../static/dist/js/template.js"></script>
+  <script src="../../static/js/CourseMaterial.js"></script>
 </body>
+
 </html>
+<script id="main_template" type="text/html">
+  <div class="row">
+    {{each classList as cla i}}
+    <div class="col-md-12">
+      <div class="box box-primary">
+        <div class="box-header with-border">
+          <h3 class="box-title">{{cla.className}} {{cla.teacherName}} {{cla.classTime}}</h3>
+          <div class="box-tools pull-right">
+            <button itype="{{cla.classID}}" name="MaterialPlus" type="button" class="btn btn-box-tool"> <i class="fa fa-plus-circle"></i>
+            </button>
+            <button type="button" class="btn btn-box-tool" data-widget="collapse"> <i class="fa fa-minus"></i>
+            </button>
+          </div>
+        </div>
+        <!-- /.box-header -->
+
+        <div class="box-body">
+          <ul class="products-list product-list-in-box">
+            {{each cla.srcList as src j}}
+            <li class="item">
+              <div class="product-img">
+                <img src="{{src.urlOfPic}}" alt="Product Image">
+              </div>
+              <div class="product-info">
+                <a class="product-title">
+                  {{src.srcName}}
+                  <div class="btn-group pull-right">
+                    <button itype="{{src.srcUrl}}" type="button" class="btn btn-default">下载</button>
+                    <button itype="{{src.srcUrl}}" type="button" class="btn btn-default">预览</button>
+                  </div>
+                </a>
+              </div>
+            </li>
+            {{/each}}
+            <!-- /.item -->
+          </ul>
+        </div>
+        <!-- /.box-body -->
+      </div>
+      <!-- /.box -->
+    </div>
+    <!-- /.col-md-12 -->
+    {{/each}}
+  </div>
+</script>
