--- a/static/pages/OtherMaterial.html
+++ b/static/pages/OtherMaterial.html
@@ -71,9 +71,8 @@ desired effect
         </h1>
         <ol class="breadcrumb">
           <li>
-            <a href="#"> <i class="fa fa-dashboard"></i>
+            <i class="fa fa-dashboard"></i>
               Home
-            </a>
           </li>
           <li class="active">Other Material</li>
         </ol>
@@ -81,171 +80,10 @@ desired effect
 
       <!-- Main content -->
       <section class="content">
-        <div class="row">
-
-          <div class="col-md-12">
-            <div class="box box-primary">
-              <div class="box-header with-border">
-                <h3 class="box-title">软件需求工程 刘玉生老师 周五3.4.5节</h3>
-
-                <div class="box-tools pull-right">
-                  <button name="MaterialPlus" type="button" class="btn btn-box-tool"> <i class="fa fa-plus-circle"></i>
-                  </button>
-                  <button type="button" class="btn btn-box-tool" data-widget="collapse"> <i class="fa fa-minus"></i>
-                  </button>
-                </div>
-              </div>
-              <!-- /.box-header -->
-              <div class="box-body">
-                <ul class="products-list product-list-in-box">
-                  <li class="item">
-                    <div class="product-img">
-                      <img src="../../static/set/dist/img/default-50x50.gif" alt="Product Image"></div>
-                    <div class="product-info">
-                      <a href="javascript:void(0)" class="product-title">
-                        ch1
-                        <div class="btn-group pull-right">
-                          <button type="button" class="btn btn-default">下载</button>
-                          <button type="button" class="btn btn-default">预览</button>
-                        </div>
-                        <span class="product-description">第一章</span>
-                      </a>
-                    </div>
-                  </li>
-                  <!-- /.item -->
-                  <li class="item">
-                    <div class="product-img">
-                      <img src="../../static/set/dist/img/default-50x50.gif" alt="Product Image"></div>
-                    <div class="product-info">
-                      <a href="javascript:void(0)" class="product-title">
-                        ch2
-                        <div class="btn-group pull-right">
-                          <button type="button" class="btn btn-default">下载</button>
-                          <button type="button" class="btn btn-default">预览</button>
-                        </div>
-                        <span class="product-description">第二章</span>
-                      </a>
-                    </div>
-                  </li>
-                  <!-- /.item -->
-                  <li class="item">
-                    <div class="product-img">
-                      <img src="../../static/set/dist/img/default-50x50.gif" alt="Product Image"></div>
-                    <div class="product-info">
-                      <a href="javascript:void(0)" class="product-title">
-                        ch3
-                        <div class="btn-group pull-right">
-                          <button type="button" class="btn btn-default">下载</button>
-                          <button type="button" class="btn btn-default">预览</button>
-                        </div>
-                        <span class="product-description">第三章</span>
-                      </a>
-                    </div>
-                  </li>
-                  <!-- /.item -->
-                  <li class="item">
-                    <div class="product-img">
-                      <img src="../../static/set/dist/img/default-50x50.gif" alt="Product Image"></div>
-                    <div class="product-info">
-                      <a href="javascript:void(0)" class="product-title">
-                        ch4
-                        <div class="btn-group pull-right">
-                          <button type="button" class="btn btn-default">下载</button>
-                          <button type="button" class="btn btn-default">预览</button>
-                        </div>
-                        <span class="product-description">第四章</span>
-                      </a>
-                    </div>
-                  </li>
-                  <!-- /.item --> </ul>
-              </div>
-              <!-- /.box-body --> </div>
-            <!-- /.box --> </div>
-          <!-- /.col-md-12 -->
-
-          <div class="col-md-12">
-            <div class="box box-primary">
-              <div class="box-header with-border">
-                <h3 class="box-title">软件工程管理 邢卫老师 周三3.4.5节</h3>
-
-                <div class="box-tools pull-right">
-                  <button name="MaterialPlus" type="button" class="btn btn-box-tool"> <i class="fa fa-plus-circle"></i>
-                  </button>
-                  <button type="button" class="btn btn-box-tool" data-widget="collapse">
-                    <i class="fa fa-minus"></i>
-                  </button>
-
-                </div>
-              </div>
-              <!-- /.box-header -->
-              <div class="box-body">
-                <ul class="products-list product-list-in-box">
-                  <li class="item">
-                    <div class="product-img">
-                      <img src="../../static/set/dist/img/default-50x50.gif" alt="Product Image"></div>
-                    <div class="product-info">
-                      <a href="javascript:void(0)" class="product-title">
-                        ch1
-                        <div class="btn-group pull-right">
-                          <button type="button" class="btn btn-default">下载</button>
-                          <button type="button" class="btn btn-default">预览</button>
-                        </div>
-                        <span class="product-description">第一章</span>
-                      </a>
-                    </div>
-                  </li>
-                  <!-- /.item -->
-                  <li class="item">
-                    <div class="product-img">
-                      <img src="../../static/set/dist/img/default-50x50.gif" alt="Product Image"></div>
-                    <div class="product-info">
-                      <a href="javascript:void(0)" class="product-title">
-                        ch2
-                        <div class="btn-group pull-right">
-                          <button type="button" class="btn btn-default">下载</button>
-                          <button type="button" class="btn btn-default">预览</button>
-                        </div>
-                        <span class="product-description">第二章</span>
-                      </a>
-                    </div>
-                  </li>
-                  <!-- /.item -->
-                  <li class="item">
-                    <div class="product-img">
-                      <img src="../../static/set/dist/img/default-50x50.gif" alt="Product Image"></div>
-                    <div class="product-info">
-                      <a href="javascript:void(0)" class="product-title">
-                        ch3
-                        <div class="btn-group pull-right">
-                          <button type="button" class="btn btn-default">下载</button>
-                          <button type="button" class="btn btn-default">预览</button>
-                        </div>
-                        <span class="product-description">第三章</span>
-                      </a>
-                    </div>
-                  </li>
-                  <!-- /.item -->
-                  <li class="item">
-                    <div class="product-img">
-                      <img src="../../static/set/dist/img/default-50x50.gif" alt="Product Image"></div>
-                    <div class="product-info">
-                      <a href="javascript:void(0)" class="product-title">
-                        ch4
-                        <div class="btn-group pull-right">
-                          <button type="button" class="btn btn-default">下载</button>
-                          <button type="button" class="btn btn-default">预览</button>
-                        </div>
-                        <span class="product-description">第四章</span>
-                      </a>
-                    </div>
-                  </li>
-                  <!-- /.item --> </ul>
-              </div>
-              <!-- /.box-body --> </div>
-            <!-- /.box --> </div>
-          <!-- /.col-md-12 --> </div>
-        <!-- ./row --> </section>
-      <!-- /.content --> </div>
+      <!-- load by js -->
+      </section>
+      <!-- /.content --> 
+    </div>
     <!-- /.content-wrapper -->
 
     <!-- Main Footer -->
@@ -270,5 +108,54 @@ desired effect
      fixed layout. -->
   <!-- initial -->
   <script src="../../static/js/initial.js"></script>
+  <!-- template -->
+  <script src="../../static/dist/js/template.js"></script>
+  <script src="../../static/js/CourseMaterial.js"></script>
 </body>
 </html>
+
+<script id="main_template" type="text/html">
+  <div class="row">
+    {{each classList as cla i}}
+    <div class="col-md-12">
+      <div class="box box-primary">
+        <div class="box-header with-border">
+          <h3 class="box-title">{{cla.className}} {{cla.teacherName}} {{cla.classTime}}</h3>
+          <div class="box-tools pull-right">
+            <button itype="{{cla.classID}}" name="MaterialPlus" type="button" class="btn btn-box-tool"> <i class="fa fa-plus-circle"></i>
+            </button>
+            <button type="button" class="btn btn-box-tool" data-widget="collapse"> <i class="fa fa-minus"></i>
+            </button>
+          </div>
+        </div>
+        <!-- /.box-header -->
+
+        <div class="box-body">
+          <ul class="products-list product-list-in-box">
+            {{each cla.srcList as src j}}
+            <li class="item">
+              <div class="product-img">
+                <img src="{{src.urlOfPic}}" alt="Product Image">
+              </div>
+              <div class="product-info">
+                <a class="product-title">
+                  {{src.srcName}}
+                  <div class="btn-group pull-right">
+                    <button itype="{{src.srcUrl}}" type="button" class="btn btn-default">下载</button>
+                    <button itype="{{src.srcUrl}}" type="button" class="btn btn-default">预览</button>
+                  </div>
+                </a>
+              </div>
+            </li>
+            {{/each}}
+            <!-- /.item -->
+          </ul>
+        </div>
+        <!-- /.box-body -->
+      </div>
+      <!-- /.box -->
+    </div>
+    <!-- /.col-md-12 -->
+    {{/each}}
+  </div>
+</script>
