--- a/static/pages/TeacherIntro.html
+++ b/static/pages/TeacherIntro.html
@@ -103,7 +103,7 @@ desired effect
   <script src="../../static/js/initial.js"></script>
   <!-- template -->
   <script src="../../static/dist/js/template.js"></script>
-  <script src="../../static/js/TeacherIntro.js"></script>
+  <script src="../../static/js/Intro.js"></script>
 </body>
 
 
@@ -114,30 +114,32 @@ desired effect
     <div class="col-md-12">
       <div class="box box-solid">
         <div class="box-body">
-          <div id="carousel-course" class="carousel slide" data-ride="carousel">
+          <div id="carousel-intro" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
-              {{each list as data i}} {{if i == 0}}
-              <li data-target="#carousel-course" data-slide-to="page{{i}}" class="active"></li>
+              {{each introList as intro i}} {{if i == 0}}
+              <li data-target="#carousel-intro" data-slide-to="page{{i}}" class="active"></li>
               {{else}}
-              <li data-target="#carousel-course" data-slide-to="page{{i}}"></li>
-              {{/if}} {{/each}}
+              <li data-target="#carousel-intro" data-slide-to="page{{i}}"></li>
+              {{/if}} 
+              {{/each}}
             </ol>
             <div class="carousel-inner">
-              {{each list as data i}} {{if i == 0}}
+              {{each introList as intro i}} 
+              {{if i == 0}}
               <div class="item active">
                 {{else}}
                 <div class="item">
                   {{/if}}
                   <a href="#page{{i}}">
-                    <img src="../../static/src/neko{{i+1}}.jpg" alt="{{data.title}}" class="center-block">
-                    <div class="carousel-caption">{{data.title}}</div>
+                    <img src="{{intro.srcOfPic}}" alt="{{intro.name}}" class="center-block">
+                    <div class="carousel-caption">{{intro.name}}</div>
                   </a>
                 </div>
                 {{/each}}
-                <a class="left carousel-control" href="#carousel-course" data-slide="prev">
+                <a class="left carousel-control" href="#carousel-intro" data-slide="prev">
                   <span class="fa fa-angle-left"></span>
                 </a>
-                <a class="right carousel-control" href="#carousel-course" data-slide="next">
+                <a class="right carousel-control" href="#carousel-intro" data-slide="next">
                   <span class="fa fa-angle-right"></span>
                 </a>
               </div>
@@ -147,34 +149,16 @@ desired effect
           <!-- /.box -->
         </div>
         <!-- /.col -->
-        {{each list as data i}}
+        {{each introList as intro i}}
         <div class="col-md-13">
           <div class="box box-solid">
             <div class="box-header with-border"> <i class="fa fa-book"></i>
               <a name="page{{i}}"></a>
-              <h3 class="box-title">{{data.title}}</h3>
+              <h3 class="box-title">{{intro.name}}</h3>
             </div>
             <!-- /.box-header -->
             <div class="box-body">
-              {{data.content}}
-              <br> {{data.content}}
-              <br> {{data.content}}
-              <br> {{data.content}}
-              <br> {{data.content}}
-              <br> {{data.content}}
-              <br> {{data.content}}
-              <br> {{data.content}}
-              <br> {{data.content}}
-              <br> {{data.content}}
-              <br> {{data.content}}
-              <br> {{data.content}}
-              <br> {{data.content}}
-              <br> {{data.content}}
-              <br> {{data.content}}
-              <br> {{data.content}}
-              <br> {{data.content}}
-              <br> {{data.content}}
-              <br>
+              {{intro.content}}
             </div>
             <!-- /.box-body -->
           </div>
