--- a/static/backup/CourseIntro.html
+++ b/static/backup/CourseIntro.html
@@ -13,9 +13,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Bootstrap 3.3.6 -->
   <link rel="stylesheet" href="../../static/set/bootstrap/css/bootstrap.min.css">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <!-- Ionicons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+  <link rel="stylesheet" href="https://cdn.bootcss.com/ionicons/2.0.1/css/ionicons.min.css" >
   <!-- Theme style -->
   <link rel="stylesheet" href="../../static/set/dist/css/AdminLTE.min.css">
   <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
@@ -38,11 +38,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
     <!-- Main Header -->
     <header class="main-header">
-      <!-- load by js  --> </header>
+      <!--load by js--> </header>
 
     <!-- Left side column. contains the logo and sidebar -->
     <aside class="main-sidebar">
-      <!-- load by js --> </aside>
+      <!--load by js--> </aside>
 
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
@@ -52,8 +52,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
           课程介绍
           <small>Course Introduction</small>
         </h1>
+        <button id="PlusButton" type="button" class="btn pull-right"> <i class="glyphicon glyphicon-plus"></i>
+        </button>
         <ol class="breadcrumb">
-          <li>
+          <li id="test">
             <a href="#"> <i class="fa fa-dashboard"></i>
               Home
             </a>
@@ -61,191 +63,19 @@ scratch. This page gets rid of all links and provides the needed markup only.
           <li class="active">Course Introduction</li>
         </ol>
       </section>
-
       <!-- Main content -->
+
       <section class="content">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="box box-solid">
-              <div class="box-body">
-                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                  <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
-                  </ol>
-                  <div class="carousel-inner">
-                    <div class="item active">
-                      <a href="#First">
-                        <img src="../../static/src/neko1.jpg" alt="First slide" class="center-block">
-
-                        <div class="carousel-caption">First Slide</div>
-                      </a>
-                    </div>
-                    <div class="item pull-">
-                      <a href="#Second">
-                        <img src="../../static/src/neko2.jpg" alt="Second slide" class="center-block">
-
-                        <div class="carousel-caption">Second Slide</div>
-                      </a>
-                    </div>
-                    <div class="item">
-                      <a href="#Third">
-                        <img src="../../static/src/neko3.jpg" alt="Third slide" class="center-block">
-
-                        <div class="carousel-caption">Third Slide</div>
-                      </a>
-                    </div>
-                  </div>
-                  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                    <span class="fa fa-angle-left"></span>
-                  </a>
-                  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                    <span class="fa fa-angle-right"></span>
-                  </a>
-                </div>
-              </div>
-              <!-- /.box-body --> </div>
-            <!-- /.box --> </div>
-          <!-- /.col -->
-
-          <!-- <div class="row">
-          -->
-          <div class="col-md-12">
-            <div class="box box-solid">
-              <div class="box-header with-border"> <i class="fa fa-book"></i>
-                <a name="First"></a>
-                <h3 class="box-title">First Page</h3>
-              </div>
-              <!-- /.box-header -->
-              <div class="box-body">
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-              </div>
-              <!-- /.box-body --> </div>
-            <!-- /.box --> </div>
-          <!-- ./col -->
-
-          <!-- <div class="row">
-          -->
-          <div class="col-md-12">
-            <div class="box box-solid">
-              <div class="box-header with-border">
-                <i class="fa fa-book"></i>
-                <a name="Second"></a>
-                <h3 class="box-title">Second Page</h3>
-              </div>
-              <!-- /.box-header -->
-              <div class="box-body">
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-              </div>
-              <!-- /.box-body --> </div>
-            <!-- /.box --> </div>
-          <!-- ./col -->
-
-          <!-- <div class="row">
-          -->
-          <div class="col-md-12">
-            <div class="box box-solid">
-              <div class="box-header with-border">
-                <i class="fa fa-book"></i>
-                <a name="Third"></a>
-                <h3 class="box-title">Third Page</h3>
-              </div>
-              <!-- /.box-header -->
-              <div class="box-body">
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-              </div>
-              <!-- /.box-body --> </div>
-            <!-- /.box --> </div>
-          <!-- ./col --> </div>
-        <!-- ./row --> </section>
-      <!-- /.content --> </div>
+      <!-- load by js  -->
+      </section>
+      <!-- /.content --> 
+      
+    </div>
     <!-- /.content-wrapper -->
 
     <!-- Main Footer -->
     <footer class="main-footer">
-      <!-- load by js --> </footer>
+      <!--load by js--> </footer>
 
   </div>
   <!-- ./wrapper -->
@@ -261,5 +91,72 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- initial -->
   <script src="../../static/js/initial.js"></script>
 
+  <!-- template -->
+  <script src="../../static/dist/js/template.js"></script>
+  <script src="../../static/js/Intro.js"></script>
 </body>
 </html>
+
+
+<!-- content template -->
+<script id="main_template" type="text/html">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="box box-solid">
+        <div class="box-body">
+          <div id="carousel-intro" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              {{each introList as intro i}} 
+              {{if i == 0}}
+              <li data-target="#carousel-intro" data-slide-to="page{{i}}" class="active"></li>
+              {{else}}
+              <li data-target="#carousel-intro" data-slide-to="page{{i}}"></li>
+              {{/if}} 
+              {{/each}}
+            </ol>
+            <div class="carousel-inner">
+              {{each introList as intro i}} 
+              {{if i == 0}}
+              <div class="item active">
+                {{else}}
+                <div class="item">
+                  {{/if}}
+                  <a href="#page{{i}}">
+                    <img src="{{intro.srcOfPic}}" alt="{{intro.name}}" class="center-block">
+                    <div class="carousel-caption">{{intro.name}}</div>
+                  </a>
+                </div>
+                {{/each}}
+                <a class="left carousel-control" href="#carousel-intro" data-slide="prev">
+                  <span class="fa fa-angle-left"></span>
+                </a>
+                <a class="right carousel-control" href="#carousel-intro" data-slide="next">
+                  <span class="fa fa-angle-right"></span>
+                </a>
+              </div>
+            </div>
+            <!-- /.box-body -->
+          </div>
+          <!-- /.box -->
+        </div>
+        <!-- /.col -->
+        {{each introList as intro i}}
+        <div class="col-md-13">
+          <div class="box box-solid">
+            <div class="box-header with-border"> <i class="fa fa-book"></i>
+              <a name="page{{i}}"></a>
+              <h3 class="box-title">{{intro.name}}</h3>
+            </div>
+            <!-- /.box-header -->
+            <div class="box-body">
+              {{intro.content}}
+            </div>
+            <!-- /.box-body -->
+          </div>
+          <!-- /.box -->
+        </div>
+        <!-- ./col -->
+        {{/each}}
+      </div>
+      <!-- ./row -->
+</script>
