--- a/static/backup/TeacherIntro.html
+++ b/static/backup/TeacherIntro.html
@@ -4,6 +4,7 @@ This is a starter template page. Use this page to start your new project from
 scratch. This page gets rid of all links and provides the needed markup only.
 -->
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,9 +14,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Bootstrap 3.3.6 -->
   <link rel="stylesheet" href="../../static/set/bootstrap/css/bootstrap.min.css">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <!-- Ionicons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+  <link rel="stylesheet" href="https://cdn.bootcss.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="../../static/set/dist/css/AdminLTE.min.css">
   <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
@@ -23,7 +24,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
         apply the skin class to the body tag so the changes take effect.
   -->
   <link rel="stylesheet" href="../../static/set/dist/css/skins/skin-blue.min.css">
-
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -31,7 +31,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 </head>
-  <!--
+<!--
 BODY TAG OPTIONS:
 =================
 Apply one or more of the following classes to get the
@@ -51,16 +51,17 @@ desired effect
 |               | sidebar-mini                            |
 |---------------------------------------------------------|
 -->
+
 <body class="hold-transition skin-blue sidebar-mini">
   <div class="wrapper">
-
     <!-- Main Header -->
     <header class="main-header">
-      <!-- load by js --> </header>
+      <!--load by js-->
+    </header>
     <!-- Left side column. contains the logo and sidebar -->
     <aside class="main-sidebar">
-      <!-- /.sidebar --> </aside>
-
+      <!--load by js-->
+    </aside>
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
       <!-- Content Header (Page header) -->
@@ -69,206 +70,29 @@ desired effect
           教师介绍
           <small>Teacher Introduction</small>
         </h1>
+        <button id="PlusButton" type="button" class="btn pull-right"> <i class="glyphicon glyphicon-plus"></i>
+        </button>
         <ol class="breadcrumb">
           <li>
-            <a href="#"> <i class="fa fa-dashboard"></i>
-              Home
+            <a href="#"> <i class="fa fa-dashboard"></i> Home
             </a>
           </li>
           <li class="active">Teacher Introduction</li>
         </ol>
       </section>
-
       <!-- Main content -->
       <section class="content">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="box box-solid">
-              <div class="box-body">
-                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                  <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2" class=""></li>
-                  </ol>
-                  <div class="carousel-inner">
-                    <div class="item active">
-                      <a href="#First">
-                        <img src="../../static/src/neko1.jpg" alt="First slide" class="center-block">
-
-                        <div class="carousel-caption">First Slide</div>
-                      </a>
-                    </div>
-                    <div class="item">
-                      <a href="#Second">
-                        <img src="../../static/src/neko2.jpg" alt="Second slide" class="center-block">
-
-                        <div class="carousel-caption">Second Slide</div>
-                      </a>
-                    </div>
-                    <div class="item">
-                      <a href="#Third">
-                        <img src="../../static/src/neko3.jpg" alt="Third slide" class="center-block">
-
-                        <div class="carousel-caption">Third Slide</div>
-                      </a>
-                    </div>
-                  </div>
-                  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                    <span class="fa fa-angle-left"></span>
-                  </a>
-                  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                    <span class="fa fa-angle-right"></span>
-                  </a>
-                </div>
-              </div>
-              <!-- /.box-body --> </div>
-            <!-- /.box --> </div>
-          <!-- /.col -->
-
-          <!-- <div class="row">
-          -->
-          <div class="col-md-12">
-            <div class="box box-solid">
-              <div class="box-header with-border"> <i class="fa fa-mortar-board"></i>
-                <a name="First"></a>
-                <h3 class="box-title">First Page</h3>
-              </div>
-              <!-- /.box-header -->
-              <div class="box-body">
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-              </div>
-              <!-- /.box-body --> </div>
-            <!-- /.box --> </div>
-          <!-- ./col -->
-
-          <!-- <div class="row">
-          -->
-          <div class="col-md-12">
-            <div class="box box-solid">
-              <div class="box-header with-border">
-                <i class="fa fa-mortar-board"></i>
-                <a name="Second"></a>
-                <h3 class="box-title">Second Page</h3>
-              </div>
-              <!-- /.box-header -->
-              <div class="box-body">
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-              </div>
-              <!-- /.box-body --> </div>
-            <!-- /.box --> </div>
-          <!-- ./col -->
-
-          <!-- <div class="row">
-          -->
-          <div class="col-md-12">
-            <div class="box box-solid">
-              <div class="box-header with-border">
-                <i class="fa fa-mortar-board"></i>
-                <a name="Third"></a>
-                <h3 class="box-title">Third Page</h3>
-              </div>
-              <!-- /.box-header -->
-              <div class="box-body">
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-                <h1>There are words</h1>
-              </div>
-              <!-- /.box-body --> </div>
-            <!-- /.box --> </div>
-          <!-- ./col --> </div>
-        <!-- ./row --> </section>
-      <!-- /.content --> </div>
+        <!-- load by js -->
+      </section>
+    </div>
     <!-- /.content-wrapper -->
-
     <!-- Main Footer -->
     <footer class="main-footer">
-      <!-- load by js --> </footer>
-
+      <!--load by js-->
+    </footer>
   </div>
   <!-- ./wrapper -->
-
   <!-- REQUIRED JS SCRIPTS -->
-
   <!-- jQuery 2.2.3 -->
   <script src="../../static/set/plugins/jQuery/jquery-2.2.3.min.js"></script>
   <!-- Bootstrap 3.3.6 -->
@@ -277,6 +101,71 @@ desired effect
   <script src="../../static/set/dist/js/app.min.js"></script>
   <!-- initial -->
   <script src="../../static/js/initial.js"></script>
-
+  <!-- template -->
+  <script src="../../static/dist/js/template.js"></script>
+  <script src="../../static/js/Intro.js"></script>
 </body>
+
+
 </html>
+<!-- content template -->
+<script id="main_template" type="text/html">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="box box-solid">
+        <div class="box-body">
+          <div id="carousel-intro" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              {{each introList as intro i}} {{if i == 0}}
+              <li data-target="#carousel-intro" data-slide-to="page{{i}}" class="active"></li>
+              {{else}}
+              <li data-target="#carousel-intro" data-slide-to="page{{i}}"></li>
+              {{/if}} 
+              {{/each}}
+            </ol>
+            <div class="carousel-inner">
+              {{each introList as intro i}} 
+              {{if i == 0}}
+              <div class="item active">
+                {{else}}
+                <div class="item">
+                  {{/if}}
+                  <a href="#page{{i}}">
+                    <img src="{{intro.srcOfPic}}" alt="{{intro.name}}" class="center-block">
+                    <div class="carousel-caption">{{intro.name}}</div>
+                  </a>
+                </div>
+                {{/each}}
+                <a class="left carousel-control" href="#carousel-intro" data-slide="prev">
+                  <span class="fa fa-angle-left"></span>
+                </a>
+                <a class="right carousel-control" href="#carousel-intro" data-slide="next">
+                  <span class="fa fa-angle-right"></span>
+                </a>
+              </div>
+            </div>
+            <!-- /.box-body -->
+          </div>
+          <!-- /.box -->
+        </div>
+        <!-- /.col -->
+        {{each introList as intro i}}
+        <div class="col-md-13">
+          <div class="box box-solid">
+            <div class="box-header with-border"> <i class="fa fa-book"></i>
+              <a name="page{{i}}"></a>
+              <h3 class="box-title">{{intro.name}}</h3>
+            </div>
+            <!-- /.box-header -->
+            <div class="box-body">
+              {{intro.content}}
+            </div>
+            <!-- /.box-body -->
+          </div>
+          <!-- /.box -->
+        </div>
+        <!-- ./col -->
+        {{/each}}
+      </div>
+      <!-- ./row -->
+</script>
