--- a/static/pages/Homework.html
+++ b/static/pages/Homework.html
@@ -4,6 +4,7 @@ This is a starter template page. Use this page to start your new project from
 scratch. This page gets rid of all links and provides the needed markup only.
 -->
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +16,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <!-- Ionicons -->
-  <link rel="stylesheet" href="https://cdn.bootcss.com/ionicons/2.0.1/css/ionicons.min.css" >
+  <link rel="stylesheet" href="https://cdn.bootcss.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="../../static/set/dist/css/AdminLTE.min.css">
   <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
@@ -23,7 +24,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
         apply the skin class to the body tag so the changes take effect.
   -->
   <link rel="stylesheet" href="../../static/set/dist/css/skins/skin-blue.min.css">
-
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -31,36 +31,17 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 </head>
-  <!--
-BODY TAG OPTIONS:
-=================
-Apply one or more of the following classes to get the
-desired effect
-|---------------------------------------------------------|
-| SKINS         | skin-blue                               |
-|               | skin-black                              |
-|               | skin-purple                             |
-|               | skin-yellow                             |
-|               | skin-red                                |
-|               | skin-green                              |
-|---------------------------------------------------------|
-|LAYOUT OPTIONS | fixed                                   |
-|               | layout-boxed                            |
-|               | layout-top-nav                          |
-|               | sidebar-collapse                        |
-|               | sidebar-mini                            |
-|---------------------------------------------------------|
--->
+
 <body class="hold-transition skin-blue sidebar-mini">
   <div class="wrapper">
-
     <!-- Main Header -->
     <header class="main-header">
-      <!--load by js--> </header>
+      <!--load by js-->
+    </header>
     <!-- Left side column. contains the logo and sidebar -->
     <aside class="main-sidebar">
-      <!--load by js--> </aside>
-
+      <!--load by js-->
+    </aside>
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
       <!-- Content Header (Page header) -->
@@ -71,8 +52,7 @@ desired effect
         </h1>
         <ol class="breadcrumb">
           <li>
-            <a href="#"> <i class="fa fa-dashboard"></i>
-              Home
+            <a href="#"> <i class="fa fa-dashboard"></i> Home
             </a>
           </li>
           <li>
@@ -81,199 +61,19 @@ desired effect
           <li class="active">Homework ID</li>
         </ol>
       </section>
-
       <!-- Main content -->
       <section class="content">
-
-        <div class="row">
-          <div class="col-md-12">
-            <div class="box box-solid">
-              <div class="box-header with-border">
-                <h3 class="box-title">Homework Title</h3>
-              </div>
-              <div class="box-body">
-                <h1>Homework description</h1>
-                <h1>Homework description</h1>
-                <h1>Homework description</h1>
-                <h1>Homework description</h1>
-                <h1>Homework description</h1>
-                <h1>Homework description</h1>
-                <h1>Homework description</h1>
-                <h1>Homework description</h1>
-                <h1>Homework description</h1>
-                <h1>Homework description</h1>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-12">
-            <div class="box box-solid">
-              <div class="box-header with-border">
-                <h3 class="box-title">Homework Comment</h3>
-              </div>
-              <div class="box-body">
-                <h1>Teacher comment</h1>
-                <h1>Teacher comment</h1>
-                <h1>Teacher comment</h1>
-                <h1>Teacher comment</h1>
-                <h1>Teacher comment</h1>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-12">
-            <div class="box-body">
-              <div class="box-group" id="accordion1">
-                <!-- we are adding the .panel class so bootstrap.js collapse plugin detects it -->
-                <div class="panel box box-primary">
-                  <div class="box-header with-border">
-                    <h4 class="box-title">
-                      <a data-toggle="collapse" data-parent="#accordion1" href="#1-collapseOne">Time Line</a>
-                    </h4>
-                  </div>
-                  <div id="1-collapseOne" class="panel-collapse collapse">
-                    <div class="box-body">
-                      <!-- The time line -->
-                      <ul class="timeline">
-                        <!-- timeline time label -->
-                        <li class="time-label">
-                          <span class="bg-red">10 Feb. 2014</span>
-                        </li>
-                        <!-- /.timeline-label -->
-                        <!-- timeline item -->
-                        <li> <i class="fa fa-mortar-board bg-blue"></i>
-
-                          <div class="timeline-item">
-                            <span class="time">
-                              <i class="fa fa-clock-o"></i>
-                              12:05
-                            </span>
-
-                            <h3 class="timeline-header">
-                              <a href="#">Teacher</a>
-                              checked your homework and made a score for you!
-                            </h3>
-
-                            <div class="timeline-body">
-                              Your score : 98
-                              <br>
-                              part1 : 50
-                              <br>
-                              part2 :20
-                              <br>part3: 28</div>
-                          </div>
-                        </li>
-                        <!-- END timeline item -->
-
-                        <!-- timeline item -->
-                        <li>
-                          <i class="fa fa-comments bg-yellow"></i>
-
-                          <div class="timeline-item">
-                            <span class="time">
-                              <i class="fa fa-clock-o"></i>
-                              27 mins ago
-                            </span>
-
-                            <h3 class="timeline-header">
-                              <a href="#">Jay White</a>
-                              commented on your post
-                            </h3>
-
-                            <div class="timeline-body">
-                              Take me to your leader!
-                                Switzerland is small and neutral!
-                                We are more like Germany, ambitious and misunderstood!
-                            </div>
-                          </div>
-                        </li>
-                        <!-- END timeline item -->
-                        <!-- timeline time label -->
-                        <li class="time-label">
-                          <span class="bg-green">3 Jan. 2014</span>
-                        </li>
-                        <li>
-                          <i class="fa fa-hand-stop-o bg-red"></i>
-                          <div class="timeline-item">
-                            <span class="time">
-                              <i class="fa fa-clock-o">2 days ago</i>
-                            </span>
-                            <h3 class="timeline-header">The homework stoped recieve answer!</h3>
-                          </div>
-                        </li>
-                        <!-- /.timeline-label -->
-                        <!-- timeline item -->
-                        <li>
-                          <i class="fa fa-check-square-o bg-aqua"></i>
-
-                          <div class="timeline-item">
-                            <span class="time">
-                              <i class="fa fa-clock-o"></i>
-                              2 days ago
-                            </span>
-
-                            <h3 class="timeline-header">You uploaded the answer!</h3>
-
-                          </div>
-                        </li>
-                        <!-- END timeline item -->
-                        <!-- timeline item -->
-                        <li>
-                          <i class="fa fa-upload bg-maroon"></i>
-
-                          <div class="timeline-item">
-                            <span class="time">
-                              <i class="fa fa-clock-o"></i>
-                              5 days ago
-                            </span>
-
-                            <h3 class="timeline-header">
-                              <a href="#">Mr. Doe</a>
-                              Post a homework
-                            </h3>
-
-                          </div>
-                        </li>
-                        <!-- END timeline item -->
-                        <li>
-                          <i class="fa fa-clock-o bg-gray"></i>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- /.col -->
-          <!-- END timeline item -->
-
-          <!-- <div class="row">
-          -->
-          <div class="col-md-2 pull-right">
-            <button type="button" onclick="UpFile.click()" class="btn btn-block btn-success">
-              上传作业
-              <input type="file" id="UpFile" onchange="uploadFile()" style="visibility: hidden; position: absolute;">
-            </button>
-          </div>
-          <div class="col-md-2 pull-right">
-            <button type="button" class="btn btn-block btn-info">下载附件</button>
-          </div>
-          <br></div>
-
-        <!-- /.row --> </section>
-      <!-- /.content --> </div>
+      </section>
+      <!-- /.content -->
+    </div>
     <!-- /.content-wrapper -->
-
     <!-- Main Footer -->
     <footer class="main-footer">
-      <!--load by js--> </footer>
-
+      <!--load by js-->
+    </footer>
   </div>
   <!-- ./wrapper -->
-
   <!-- REQUIRED JS SCRIPTS -->
-
   <!-- jQuery 2.2.3 -->
   <script src="../../static/set/plugins/jQuery/jquery-2.2.3.min.js"></script>
   <!-- Bootstrap 3.3.6 -->
@@ -281,11 +81,109 @@ desired effect
   <!-- AdminLTE App -->
   <script src="../../static/set/dist/js/app.min.js"></script>
 
-  <!-- Optionally, you can add Slimscroll and FastClick plugins.
-     Both of these plugins are recommended to enhance the
-     user experience. Slimscroll is required when using the
-     fixed layout. -->
   <!-- initial -->
   <script src="../../static/js/initial.js"></script>
+  <!-- template -->
+  <script src="../../static/dist/js/template.js"></script>
+  <script src="../../static/js/Homework.js"></script>
 </body>
+
 </html>
+<script id="main_template" type="text/html">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="box box-solid">
+        <div class="box-header with-border">
+          <h3 class="box-title">{{homeworkName}}</h3>
+        </div>
+        <div class="box-body">
+          {{homeworkContent}}
+        </div>
+      </div>
+    </div>
+    <!-- timeline -->
+    <div class="col-md-12">
+      <div class="box-body">
+        <div class="box-group" id="accordion">
+          <div class="panel box box-primary">
+            <div class="box-header with-border">
+              <h4 class="box-title">
+                      <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Time Line</a>
+                    </h4>
+            </div>
+            <div id="collapseOne" class="panel-collapse collapse">
+              <div class="box-body">
+                <!-- The time line -->
+                <ul class="timeline">
+                  {{each eventList as event i}} {{if event.type == 'CHECK'}}
+                  <li>
+                    <i class="fa fa-mortar-board bg-blue"></i> 
+                  {{else if event.type == 'COMMENT'}}
+                  <li>
+                    <i class="fa fa-comments bg-yellow"></i> 
+                  {{else if event.type == 'STOP'}}
+                  <li class="time-label">
+                    <span class="bg-green">{{DDL}}</span>
+                  </li>
+                  <li>
+                    <i class="fa fa-hand-stop-o bg-red"></i> 
+                  {{else if event.type == 'COMMIT'}}
+                  <li>
+                  <i class="fa fa-check-square-o bg-aqua"></i> 
+                  {{else if event.type == 'POST'}}
+                  <li>
+                    <i class="fa fa-upload bg-maroon"></i> 
+                  {{/if}}
+                    <div class="timeline-item">
+                      <span class="time">
+                        <i class="fa fa-clock-o"></i>
+                        {{event.timeToNow}}
+                      </span>
+                      <h3 class="timeline-header">
+                      {{if event.type == 'CHECK'}}
+                      {{teacherName}}老师为本次作业打分
+                      </h3>
+                      <div class="timeline-body">
+                        {{event.body}}
+                      </div>
+                      {{else if event.type == 'COMMENT'}}
+                      {{teacherName}}老师对你的作业做出了评论
+                      </h3>
+                      <div class="timeline-body">
+                        {{event.body}}
+                      </div>
+                      {{else if event.type == 'STOP'}} 本作业已经到达截至日期，逾期上交会扣除一定分数
+                      </h3>
+                      {{else if event.type == 'COMMIT'}} 你成功上传了你的作业</h3>
+                      {{else if event.type == 'POST'}}
+                      {{teacherName}}老师发布了本次作业
+                      </h3>
+                      {{/if}}
+                    </div>
+                  </li>
+                  {{/each}}
+                  <li>
+                    <i class="fa fa-clock-o bg-gray"></i>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /.col -->
+    <!-- END timeline item -->
+    <div class="col-md-2 pull-right">
+      <button type="button" onclick="UpFile.click()" class="btn btn-block btn-success">
+        上传作业
+        <input type="file" id="UpFile" onchange="uploadFile()" style="visibility: hidden; position: absolute;">
+      </button>
+    </div>
+    <div class="col-md-2 pull-right">
+      <button href="{{url}}" type="button" class="btn btn-block btn-info">下载附件</button>
+    </div>
+    <br>
+  </div>
+  <!-- /.row -->
+</script>
