--- a/static/pages/HomeworkCreate.html
+++ b/static/pages/HomeworkCreate.html
@@ -4,6 +4,7 @@ This is a starter template page. Use this page to start your new project from
 scratch. This page gets rid of all links and provides the needed markup only.
 -->
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +16,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <!-- Ionicons -->
-  <link rel="stylesheet" href="https://cdn.bootcss.com/ionicons/2.0.1/css/ionicons.min.css" >
+  <link rel="stylesheet" href="https://cdn.bootcss.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- daterange picker -->
   <link rel="stylesheet" href="../../static/set/plugins/daterangepicker/daterangepicker.css">
   <!-- bootstrap datepicker -->
@@ -27,7 +28,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
         apply the skin class to the body tag so the changes take effect.
   -->
   <link rel="stylesheet" href="../../static/set/dist/css/skins/_all-skins.min.css">
-
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -35,36 +35,17 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 </head>
-  <!--
-BODY TAG OPTIONS:
-=================
-Apply one or more of the following classes to get the
-desired effect
-|---------------------------------------------------------|
-| SKINS         | skin-blue                               |
-|               | skin-black                              |
-|               | skin-purple                             |
-|               | skin-yellow                             |
-|               | skin-red                                |
-|               | skin-green                              |
-|---------------------------------------------------------|
-|LAYOUT OPTIONS | fixed                                   |
-|               | layout-boxed                            |
-|               | layout-top-nav                          |
-|               | sidebar-collapse                        |
-|               | sidebar-mini                            |
-|---------------------------------------------------------|
--->
+
 <body class="hold-transition skin-blue sidebar-mini">
   <div class="wrapper">
-
     <!-- Main Header -->
     <header class="main-header">
-      <!--load by js--> </header>
+      <!--load by js-->
+    </header>
     <!-- Left side column. contains the logo and sidebar -->
     <aside class="main-sidebar">
-      <!--load by js--> </aside>
-
+      <!--load by js-->
+    </aside>
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
       <!-- Content Header (Page header) -->
@@ -75,86 +56,26 @@ desired effect
         </h1>
         <ol class="breadcrumb">
           <li>
-            <a href="#"> <i class="fa fa-dashboard"></i>
-              Home
+            <a href="#"> <i class="fa fa-dashboard"></i> Home
             </a>
           </li>
           <li class="active">Homework Create</li>
         </ol>
       </section>
-
       <!-- Main content -->
       <section class="content">
-
-        <div class="row">
-          <div class="col-md-12">
-            <!-- general form elements -->
-            <div class="box box-primary">
-              <div class="box-header with-border">
-                <h3 class="box-title">创建作业</h3>
-              </div>
-              <!-- /.box-header -->
-              <!-- form start -->
-              <form role="form">
-                <div class="box-body">
-                  <div class="form-group">
-                    <label>作业题目</label>
-                    <input type="text" class="form-control" placeholder="Enter ..."></div>
-
-                  <!-- textarea -->
-                  <div class="form-group">
-                    <label>作业描述</label>
-                    <textarea class="form-control" rows="10" placeholder="Enter ..."></textarea>
-                  </div>
-
-                  <div class="form-group">
-                    <label>选择班级</label>
-                    <select class="form-control select2" style="width: 100%;">
-                      <option selected="selected">软件管理工程 周二345</option>
-                      <option>软件管理工程 周五345</option>
-                      <option>软件需求工程 周三345</option>
-                    </select>
-                  </div>
-
-                  <div class="form-group">
-                    <label>发布与结束时间</label>
-                    <div class="input-group">
-                      <div class="input-group-addon"> <i class="fa fa-clock-o"></i>
-                      </div>
-                      <input type="text" class="form-control pull-right" id="reservationtime"></div>
-                  </div>
-
-                  <!-- /.input group -->
-                  <div class="form-group">
-                    <button type="button" onclick="UpFile.click()" class="btn btn-default" id="attachment">
-                      上传文档
-                      <i class="fa fa-arrow-circle-up"></i>
-                      <input type="file" id="UpFile" onchange="uploadFile()" style="visibility: hidden; position: absolute;"></button>
-                  </div>
-                </div>
-                <!-- /.box-body -->
-
-                <div class="box-footer">
-                  <button type="submit" class="btn btn-primary pull-right">确认</button>
-                </div>
-              </form>
-
-            </div>
-            <!-- /.box --> </div>
-          <!-- /.col --> </div>
-        <!-- /.row --> </section>
-      <!-- /.content --> </div>
+        
+      </section>
+      <!-- /.content -->
+    </div>
     <!-- /.content-wrapper -->
-
     <!-- Main Footer -->
     <footer class="main-footer">
-      <!--load by js--> </footer>
-
+      <!--load by js-->
+    </footer>
   </div>
   <!-- ./wrapper -->
-
   <!-- REQUIRED JS SCRIPTS -->
-
   <!-- jQuery 2.2.3 -->
   <script src="../../static/set/plugins/jQuery/jquery-2.2.3.min.js"></script>
   <!-- Bootstrap 3.3.6 -->
@@ -165,14 +86,83 @@ desired effect
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js"></script>
   <script src="../../static/set/plugins/daterangepicker/daterangepicker.js"></script>
   <script src="../../static/set/plugins/datepicker/bootstrap-datepicker.js"></script>
-  <script>
-  $(document).ready(function () {
-    $('#reservationtime').daterangepicker({timePicker: true, timePickerIncrement: 30, format: 'MM/DD/YYYY h:mm A'});
-    //Date range as a button
-  });
-</script>
-
   <!-- initial -->
   <script src="../../static/js/initial.js"></script>
+  <!-- template -->
+  <script src="../../static/dist/js/template.js"></script>
+  <script src="../../static/js/HomeworkCreate.js"></script>
 </body>
+
 </html>
+
+<script id="main_template" type="text/html">
+  <div class="row">
+    <div class="col-md-12">
+      <!-- general form elements -->
+      <div class="box box-primary">
+        <div class="box-header with-border">
+          <h3 class="box-title">创建作业</h3>
+        </div>
+        <!-- /.box-header -->
+        <!-- form start -->
+        <form role="form">
+          <div class="box-body">
+            <div class="form-group">
+              <label>作业题目</label>
+              <input type="text" class="form-control" placeholder="Enter ..." value="{{homeworkName}}">
+            </div>
+            <!-- textarea -->
+            <div class="form-group">
+              <label>作业描述</label>
+              <textarea class="form-control" rows="10" placeholder="Enter ..." value=>{{homeworkContent}}</textarea>
+            </div>
+            <div class="form-group">
+              <label>选择班级</label>
+              <select class="form-control select2" style="width: 100%;">
+              {{each classList as cla i}}
+              {{if cla.isSelect == 'Y'}}
+                <option selected="selected" itype="{{cla.classID}}">
+              {{else}}
+                <option itype="{{cla.classID}}">
+              {{/if}}
+              {{cla.className}} {{cla.classTime}}
+              </option>
+              {{/each}}
+              </select>
+            </div>
+            <div class="form-group">
+              <label>发布与结束时间</label>
+              <div class="input-group">
+                <div class="input-group-addon"> <i class="fa fa-clock-o"></i>
+                </div>
+                <input type="text" class="form-control pull-right" id="reservationtime" value="{{startTime}} - {{DDL}}">
+              </div>
+            </div>
+            <!-- /.input group -->
+            <div class="form-group">
+              <button type="button" onclick="UpFile.click()" class="btn btn-default" id="attachment">
+                上传文档
+                <i class="fa fa-arrow-circle-up"></i>
+                <input type="file" id="UpFile" onchange="uploadFile()" style="visibility: hidden; position: absolute;">
+              </button>
+            </div>
+          </div>
+          <!-- /.box-body -->
+          <div class="box-footer">
+            <button id="test_button" type="submit" class="btn btn-primary pull-right">确认</button>
+          </div>
+        </form>
+      </div>
+      <!-- /.box -->
+    </div>
+    <!-- /.col -->
+  </div>
+  <!-- /.row -->
+  <script>
+  $(document).ready(function() {
+    $('#reservationtime').daterangepicker({
+      format: 'MM/DD/YYYY'
+    })
+  })
+  </script>
+</script>
