fixed some problem in profileModal

--- a/static/StaticPage/ProfileModal.html
+++ b/static/StaticPage/ProfileModal.html
@@ -13,7 +13,7 @@
           <input id="ProfileName" type="text" class="form-control" placeholder="">
           <label for="ProfileQues">密保问题</label>
           <input id="ProfileQues" type="text" class="form-control" placeholder="">
-          <label for="ProfileAns">密保问题</label>
+          <label for="ProfileAns">密保答案</label>
           <input id="ProfileAns" type="text" class="form-control" placeholder="">
           <label for="ProfilePass">修改密码</label>
           <input id="ProfilePass"type="password" class="form-control" placeholder="">
