fixed some bugs

--- a/static/pages/ClassManage.html
+++ b/static/pages/ClassManage.html
@@ -187,7 +187,7 @@ desired effect
             {{each studentList as student i}}
             <tr>
               <td>
-                <input type="checkbox" id="cb_{{student.studentID}}">
+                <input type="checkbox" id="cb_{{student.studentID}}" name="sub">
               </td>
               <td>{{student.studentID}}</td>
               <td>{{student.group}}</td>
