--- a/static/pages/Login.html
+++ b/static/pages/Login.html
@@ -36,7 +36,7 @@
         </div>
         <div class="row">
           <div class="col-xs-4 pull-right">
-            <button id="submit" type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button>
+            <button id="submit" type="button" class="btn btn-primary btn-block btn-flat">Sign In</button>
           </div>
           <!-- /.col --> </div>
       </form>
