changed message‘s api

--- a/static/StaticPage/main-header.html
+++ b/static/StaticPage/main-header.html
@@ -42,7 +42,7 @@
 
                 <p>
                   <font name="UserName"></font> - <font name="UserType"></font>
-                  <small>Member since Nov. 2012</small>
+                  <small>The purpose of software engineering is to control complexity, not to create it.</small>
                 </p>
               </li>
               <!-- Menu Footer-->    
@@ -85,7 +85,7 @@
                   <img src="../../static/set/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"></div>
                 <!-- Message title and timestamp -->
                 <h4>
-                  {{notice.sender}} : {{notice.title}}
+                  {{notice.sender}}:
                   <small> <i class="fa fa-clock-o"></i>
                     {{notice.time}}
                   </small>
