--- a/static/pages/ClassManage.html
+++ b/static/pages/ClassManage.html
@@ -227,9 +227,7 @@ desired effect
       </div>
       <div class="modal-body">
         <div class="form-group">
-          <label for="Title">标题</label>
-          <input id="Title" type="text" class="form-control" placeholder="">
-          <label for="Content">正文</label>
+          <label for="Content">内容</label>
           <input id="Content" type="text" class="form-control" placeholder="">
         </div>
       </div>
